--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -31,7 +31,7 @@
     max-width: 685px;
   }
 
-  @media only screen and (min-width: 1050px) {
+  @media only screen and (min-width: 1000px) {
     font-size: 1.55em;
     max-width: 725px;
   }
@@ -42,6 +42,10 @@
   }
 
   @media only screen and (min-width: 1300px) {
+    margin-left: 6%;
+  }
+
+  @media only screen and (min-width: 1400px) {
     margin-left: 6%;
   }
 }
@@ -66,7 +70,7 @@
     width: 225px;
   }
 
-  @media only screen and (min-width: 1050px) {
+  @media only screen and (min-width: 1000px) {
     width: 250px;
     bottom: -10;
   }
